# RootCX

./: .dockerignore  .gitignore  ARCHITECTURE_V2.md  CLAUDE.md  Cargo.toml  Dockerfile  LICENSE.md  Makefile  README.md  build-win.ps1  docker-compose.dev.yml  docker-compose.yml  package-lock.json  package.json
apps/studio-desktop/src-tauri/: Cargo.toml  tauri.conf.json
apps/studio-desktop/src-tauri/capabilities/: default.json
apps/studio-desktop/src-tauri/src/: commands.rs  lib.rs  state.rs
core/: Cargo.toml
core/migrations/: 20260321000000_replace_username_with_email.sql  20260325000000_llm_models.sql
core/resources/assistant/: agent.json
core/resources/assistant/agent/: system.md
core/resources/integrations/: rootcx-worker.d.ts
core/resources/integrations/gmail/: index.ts  manifest.json  package.json
core/resources/integrations/google_calendar/: index.ts  manifest.json  package.json
core/resources/integrations/imap_smtp/: index.ts  manifest.json  package-lock.json  package.json
core/resources/integrations/notion/: index.ts  manifest.json  package.json
core/resources/integrations/outlook/: index.ts  manifest.json  package.json
core/resources/integrations/peppol/: generateUbl.test.ts  generateUbl.ts  index.ts  manifest.json  package-lock.json  package.json  parseUbl.test.ts  parseUbl.ts  webhook-handler.ts  webhook.test.ts
core/resources/integrations/whisper/: index.ts  manifest.json
core/src/: act_as.rs  api_error.rs  app_migrations.rs  backend_prelude.js  backend_prelude.test.ts  crons.rs  delegations.rs  error.rs  install.rs  ipc.rs  jobs.rs  lib.rs  main.rs  manifest.rs  migrations.rs  pack_runtime.rs  principal.rs  scheduler.rs  schema.rs  schema_sync.rs  secrets.rs  seed.rs  server.rs  sql_proxy.rs  tool_executor.rs  webhooks.rs  worker.rs  worker_manager.rs
core/src/auth/: identity.rs  jwt.rs  mod.rs  password.rs  token_delivery.rs
core/src/extensions/: audit.rs  auth.rs  hooks.rs  logs.rs  mcp.rs  mod.rs
core/src/extensions/agents/: approvals.rs  config.rs  mod.rs  persistence.rs  routes.rs  streaming.rs  supervision.rs
core/src/extensions/browser/: mod.rs  queue.rs  routes.rs
core/src/extensions/channels/: mod.rs  routes.rs  slack.rs  telegram.rs  types.rs
core/src/extensions/integrations/: auth.rs  catalog.rs  connections.rs  mod.rs  routes.rs
core/src/extensions/magic_link/: mod.rs  routes.rs
core/src/extensions/oidc/: mod.rs  routes.rs
core/src/extensions/platform_storage/: mod.rs
core/src/extensions/rbac/: bootstrap.rs  grant.rs  mod.rs  policy.rs  routes.rs
core/src/extensions/service_accounts/: mod.rs
core/src/extensions/sharing/: guard.rs  mod.rs  routes.rs  tests.rs  tokens.rs
core/src/extensions/storage/: backend.rs  backend_test.rs  mod.rs  nonce.rs
core/src/extensions/workflows/: events.rs  executor.rs  expr.rs  items.rs  mod.rs  routes.rs  runner.rs  validate.rs
core/src/governance/: mod.rs
core/src/governance/audit/: audit_ext.rs  mod.rs
core/src/mcp/: client.rs  mod.rs  transport.rs
core/src/routes/: auth.rs  config.rs  crons.rs  crud.rs  deploy.rs  icon.rs  introspection.rs  jobs.rs  llm_models.rs  mod.rs  query_params.rs  secrets.rs  upload.rs  webhooks.rs  workers.rs
core/src/tools/: browser.rs  call_action.rs  call_integration.rs  cli.rs  describe_app.rs  invoke_agent.rs  list_actions.rs  list_apps.rs  list_integrations.rs  mod.rs  mutate_data.rs  query_data.rs  routes.rs
core/tests/: agent_identity_test.rs  api_integration.rs  app_migrations_test.rs  app_ownership_test.rs  connections_integration.rs  delegation_matrix_test.rs  governance_contract_test.rs  harness.rs  index_sync_test.rs  magic_link_integration.rs  nonce_exchange_test.rs  owner_of_record_test.rs  service_accounts_test.rs  sharing_integration.rs  storage_integration.rs  workflows_integration.rs
core/tests/fixtures/: agent.json  agent_backend.js
crates/browser/: Cargo.toml
crates/browser/src/: action.rs  chrome.rs  error.rs  lib.rs  session.rs  wait.rs
crates/forge/: Cargo.toml
crates/forge/src/: compactor.rs  engine.rs  error.rs  lib.rs  permission.rs  question.rs  schema.rs  session.rs  skills.rs
crates/kernel/: Cargo.toml
crates/kernel/src/: app_runner.rs  error.rs  forge.rs  lib.rs  manifest.rs  schema.rs
crates/platform/: Cargo.toml  build.rs
crates/platform/src/: bin.rs  bundle.rs  dirs.rs  env.rs  fs.rs  lib.rs  process.rs  service.rs  shell.rs
crates/rootcx-cli/: Cargo.toml
crates/rootcx-cli/src/: archive.rs  auth.rs  bun.rs  cmd_agents.rs  cmd_apps.rs  cmd_auth.rs  cmd_completions.rs  cmd_data.rs  cmd_status.rs  cmd_workflows.rs  config.rs  deploy.rs  docker.rs  init.rs  logo.rs  main.rs  oidc.rs  scaffold.rs  sse.rs  testutil.rs  theme.rs  upgrade.rs
runtime/: Cargo.toml
runtime/agent/: package.json
runtime/agent/src/: compactor.ts  default-graph.ts  index.ts  ipc-tool-bridge.ts  ipc.ts  provider.ts  runner.ts  token-counter.ts
runtime/client/: Cargo.toml
runtime/client/src/: daemon.rs  lib.rs  oidc.rs
runtime/mcp-bridge/: package.json
runtime/sdk/: package.json  pnpm-lock.yaml  tsconfig.json
runtime/sdk/src/: client.test.ts  client.ts  index.ts
runtime/src/: api_error.rs  error.rs  install.rs  ipc.rs  jobs.rs  lib.rs  main.rs  manifest.rs  routes.rs  scheduler.rs  schema.rs  schema_sync.rs  secrets.rs  server.rs  worker.rs  worker_manager.rs
runtime/src/auth/: identity.rs  jwt.rs  mod.rs  password.rs
runtime/src/extensions/: audit.rs  auth.rs  logs.rs  mod.rs
runtime/src/routes/: auth.rs  crud.rs  deploy.rs  jobs.rs  mod.rs  secrets.rs  upload.rs  workers.rs
runtime/tests/: api_integration.rs  harness.rs
runtime/ui/: package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
runtime/ui/src/: index.ts
studio/src-tauri/: Cargo.toml  build.rs  nsis-hooks.nsh  tauri.conf.json
studio/src-tauri/capabilities/: default.json
studio/src-tauri/src/: app_runner.rs  browser.rs  commands.rs  forge.rs  launch.rs  lib.rs  main.rs  menu.rs  oidc.rs  runner.rs  scaffold.rs  state.rs  terminal.rs
studio/src-tauri/templates/: backend-worker.ts  globals.css
(+436 files in other folders)
