[workspace]
resolver = "2"
members = [
    "runtime",
    "runtime/client",
    "crates/postgres-mgmt",
    "crates/shared-types",
    "studio/src-tauri",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
license = "Proprietary"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono"] }

# Error handling
thiserror = "2"

# Logging / Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }

# Internal crates
rootcx-runtime = { path = "runtime" }
rootcx-runtime-client = { path = "runtime/client" }
rootcx-postgres-mgmt = { path = "crates/postgres-mgmt" }
rootcx-shared-types = { path = "crates/shared-types" }
