[workspace]
resolver = "2"
members = [
    "core",
    "runtime/client",
    "crates/browser",
    "crates/forge",
    "crates/platform",
    "crates/postgres-mgmt",
    "crates/shared-types",
    "studio/src-tauri",
]

[workspace.package]
version = "0.4.0"
edition = "2024"
license-file = "LICENSE.md"

[workspace.dependencies]
# Async runtime
tokio = { version = "1", features = ["full"] }

# Database
sqlx = { version = "0.8", features = ["runtime-tokio-rustls", "postgres", "uuid", "chrono", "migrate"] }

# Error handling
thiserror = "2"

# Logging / Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# HTTP
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }

# Internal crates
rootcx-forge = { path = "crates/forge" }
rootcx-browser = { path = "crates/browser" }
rootcx-core = { path = "core" }
rootcx-platform = { path = "crates/platform" }
rootcx-client = { path = "runtime/client" }
rootcx-postgres-mgmt = { path = "crates/postgres-mgmt" }
rootcx-types = { path = "crates/shared-types" }
