[package]
name = "rootcx-core"
version.workspace = true
edition.workspace = true

[dependencies]
tokio.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
rootcx-platform.workspace = true
rootcx-postgres-mgmt.workspace = true
rootcx-types.workspace = true
axum = { version = "0.8", features = ["multipart"] }
base64 = "0.22"
tower-http = { version = "0.6", features = ["cors"] }
async-trait = "0.1"

# Secret Vault (AES-256-GCM)
aes-gcm = "0.10"
rand = "0.8"
hex = "0.4"

# Process Supervisor
command-group = { version = "5", features = ["with-tokio"] }

# IPC (JSONL over stdin/stdout)
tokio-util = { version = "0.7", features = ["codec"] }
futures = "0.3"

# Deploy (tar.gz upload)
tar = "0.4"
flate2 = "1"

# Auth (JWT + password hashing)
argon2 = "0.5"
jsonwebtoken = "9"
hmac = "0.12"
sha2 = "0.10"

# Job Engine
uuid = { version = "1", features = ["v4", "v5", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json"] }

[dev-dependencies]
reqwest = { version = "0.12", features = ["multipart"] }
tokio = { version = "1", features = ["full", "test-util"] }
serde_json = "1"
tempfile = "3"
tar = "0.4"
flate2 = "1"

[[bin]]
name = "rootcx-core"
path = "src/main.rs"
