[package]
name = "rootcx-runtime"
version.workspace = true
edition.workspace = true

[dependencies]
tokio.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
rootcx-postgres-mgmt.workspace = true
rootcx-shared-types.workspace = true
axum = "0.8"
tower-http = { version = "0.6", features = ["cors"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[[bin]]
name = "rootcx-runtime"
path = "src/main.rs"
