[package]
name = "rootcx-browser"
version.workspace = true
edition.workspace = true
license-file = "../../LICENSE.md"

[dependencies]
chromiumoxide = { version = "0.9", default-features = false }
tokio.workspace = true
thiserror.workspace = true
tracing.workspace = true
serde.workspace = true
serde_json.workspace = true
futures = "0.3"
url = "2"
