[package]
name = "rootcx-kernel"
version.workspace = true
edition.workspace = true

[dependencies]
tokio.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
rootcx-postgres-mgmt.workspace = true
rootcx-shared-types.workspace = true
