[package]
name = "rootcx-kernel"
version.workspace = true
edition.workspace = true

[dependencies]
tokio.workspace = true
sqlx.workspace = true
thiserror.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
serde.workspace = true
serde_json.workspace = true
rootcx-postgres-mgmt.workspace = true
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }

[target.'cfg(unix)'.dependencies]
libc = "0.2"
rootcx-shared-types.workspace = true
