[package]
name = "rootcx-platform"
version = "0.10.0"
edition = "2024"
license-file = "../../LICENSE.md"
description = "RootCX platform utilities"
repository = "https://github.com/rootcx/rootcx"

[dependencies]
thiserror = { workspace = true }
tracing = { workspace = true }
tokio = { workspace = true }
tar = "0.4"
flate2 = "1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
