[package]
name = "rootcx-cli"
version.workspace = true
edition.workspace = true
license-file.workspace = true

[[bin]]
name = "rootcx"
path = "src/main.rs"

[dependencies]
rootcx-client = { workspace = true }
rootcx-types = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { version = "4", features = ["derive"] }
anyhow = "1"
reqwest = { version = "0.12", features = ["json", "stream"] }
tar = "0.4"
flate2 = "1"
walkdir = "2"
futures-util = "0.3"
dirs = "5"
urlencoding = "2"
webbrowser = "1"
rpassword = "7"
