[package]
name = "rootcx-cli"
version = "0.14.2"
edition.workspace = true
license-file.workspace = true

[[bin]]
name = "rootcx"
path = "src/main.rs"

[dependencies]
rootcx-client = { workspace = true }
rootcx-scaffold = { workspace = true }
rootcx-types = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
clap = { version = "4", features = ["derive"] }
clap_complete = "4"
anyhow = "1"
reqwest = { version = "0.12", default-features = false, features = ["json", "stream", "rustls-tls", "cookies"] }
tar = "0.4"
flate2 = "1"
walkdir = "2"
futures-util = "0.3"
dirs = "5"
tempfile = "3"
zip = "2"
urlencoding = "2"
webbrowser = "1"
rpassword = "7"
cliclack = "0.3"
self_update = { version = "0.42", default-features = false, features = ["archive-tar", "compression-flate2", "rustls"] }
console = "0.15"

[dev-dependencies]
rootcx-core = { workspace = true }
rootcx-platform = { workspace = true }
testcontainers = "0.27"
