[package]
name = "rootcx-client"
version = "0.4.0"
edition = "2024"
license-file = "../../LICENSE.md"
description = "RootCX runtime client"
repository = "https://github.com/rootcx/rootcx"

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "multipart"] }
serde_json = "1"
thiserror = "2"
rootcx-types = { version = "0.4.0", path = "../../crates/shared-types" }
