[package]
name = "rootcx-client"
version = "0.11.0"
edition = "2024"
license-file = "../../LICENSE.md"
description = "RootCX runtime client"
repository = "https://github.com/rootcx/rootcx"

[features]
tauri = ["dep:tauri", "dep:tauri-plugin-shell", "dep:tokio", "dep:urlencoding", "dep:serde"]

[dependencies]
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls", "json", "multipart"] }
serde_json = "1"
thiserror = "2"
rootcx-types = { version = "0.11.0", path = "../../crates/shared-types" }
tauri = { version = "2", optional = true }
tauri-plugin-shell = { version = "2", optional = true }
tokio = { version = "1", features = ["net", "io-util", "time"], optional = true }
urlencoding = { version = "2", optional = true }
serde = { version = "1", features = ["derive"], optional = true }
