[package]
name = "rootcx-studio"
version.workspace = true
edition.workspace = true

[lib]
name = "rootcx_studio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
rootcx-runtime-client.workspace = true
rootcx-shared-types.workspace = true
thiserror.workspace = true
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
tauri-plugin-dialog = "2"
portable-pty = "0.8"
tar = "0.4"
flate2 = "1"
notify = "7"
notify-debouncer-mini = "0.5"

[target.'cfg(unix)'.dependencies]
libc = "0.2"
