[package]
name = "rootcx-studio"
version.workspace = true
edition.workspace = true

[lib]
name = "rootcx_studio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
rootcx-browser.workspace = true
rootcx-forge.workspace = true
rootcx-platform.workspace = true
rootcx-client.workspace = true
rootcx-types.workspace = true
thiserror.workspace = true
reqwest = { version = "0.12", default-features = false, features = ["rustls-tls"] }
tauri-plugin-dialog = "2"
tauri-plugin-log = "2"
tauri-plugin-updater = "2"
tauri-plugin-process = "2"
tauri-plugin-store = "2"
portable-pty = "0.8"
tar = "0.4"
flate2 = "1"
notify = "7"
notify-debouncer-mini = "0.5"
uuid = { version = "1", features = ["v4"] }
urlencoding = "2"
fix-path-env = { git = "https://github.com/tauri-apps/fix-path-env-rs" }
