[package]
name = "rootcx-studio"
version.workspace = true
edition.workspace = true

[lib]
name = "rootcx_studio_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-shell = "2"
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
rootcx-kernel.workspace = true
rootcx-postgres-mgmt.workspace = true
rootcx-shared-types.workspace = true
